# prostate-cancer-microenvironment

./: CLAUD.md  CLAUDE.md  README.md  instructions.md  objectives.md  pyproject.toml
output/: methods.md
output/reports/: README.md  amitay_2024_melanoma_sln.md  bonollo_2020_cafs_prostate_review.md  cords_2023_caf_classification.md  danenberg_2022_breast_tme_structures.md  jackson_2020_single_cell_pathology_breast_cancer.md  keren_2018_tnbc_mibi.md  keren_2019_mibi_tof_platform.md  martinelli_2026_pca_draft.md  tan_2025_canvas_lung_heterogeneity.md
output/research-questions/: FINDINGS_SUMMARY.md  RQ10_bcell_clustering_TLS.md  RQ11_multivariable_cox.md  RQ12_pca_patient_tme.md  RQ13_grade_stratified_variance.md  RQ14_interaction_clustering.md  RQ15_score_covariation.md  RQ16_cd8_spatial_exclusion.md  RQ17_stromal_shannon.md  RQ18_dense_periglandular_caf1.md  RQ19_cribriform_spatial_signature.md  RQ1_cell_composition_clinical.md  RQ2_intrapatient_heterogeneity.md  RQ3_immune_neighborhood_TLS.md  RQ4_caf_spatial_topology.md  RQ5_spatial_entropy_diversity.md  RQ6_pairwise_cell_interactions.md  RQ7_patient_subtypes.md  RQ8_highlow_grade_paired.md  RQ9_spatial_niches.md
scripts/: sync-data.sh  upload-data-to-zenodo.py
scripts/00-spillover-correction/: spillover_correct_images_pca.R  spillover_correction_pca_120124.R  spillover_correction_pca_190224.R  transpose_and_compress_compensated_images.py
scripts/01-clustering/: 01_immune-non-immune-annotate.py  01_immune-non-immune.py  02_immune-annotate.py  02_immune.py  03_epithelial-non-epithelial.py  04_stroma-annotate.py  (+12 more)
(+61 files in other folders)
