[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prostate-cancer"
version = "0.1.0"
description = "Exploratory analysis for the prostate cancer microenvironment project."
requires-python = ">=3.10"
dependencies = [
    "anndata",
    "ai4bmr-datasets",
    "pyarrow",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]