[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prostate-cancer"
version = "0.1.0"
description = "Exploratory analysis for the prostate cancer microenvironment project."
requires-python = ">=3.10"
dependencies = [
    "anndata",
    "colorcet",
    "igraph",
    "jsonargparse",
    "leidenalg",
    "loguru",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pycirclize",
    "pyarrow",
    "PyYAML",
    "python-dotenv",
    "scanpy",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
    "umap-learn[plot]",
]

[tool.setuptools.packages.find]
where = ["src"]
